Fixed overflow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,3 +12,8 @@
  *= require_tree .
  *= require bootstrap
  */
+
+ html {
+ 	overflow-x: hidden;
+ 	overflow-y: scroll;
+ }
